style: deleted comented code

--- a/src/global.css
+++ b/src/global.css
@@ -4,18 +4,12 @@
 
 
 @layer base {
-    /* :root {
-        --text-color: 200deg, 15%, 8%;;
-        --input-color: 0, 0%, 52%;
-        --element-color: 0, 0%, 100%;
-        --background-color: 0, 0%, 98%;
-    } */
-
     body[data-theme='light'] {
         --text-color: 200deg, 15%, 8%;;
         --input-color: 0, 0%, 52%;
         --element-color: 0, 0%, 100%;
         --background-color: 0, 0%, 98%;
+        --faded-text: 240deg, 5%, 34%;
     }
 
     body[data-theme='dark'] {
@@ -23,6 +17,7 @@
         --input-color: 0, 0%, 100%;
         --element-color: 209deg, 23%, 22%;
         --background-color: 207deg, 26%, 17%;
+        --faded-text: 240deg, 5%, 84%;
     }
 
 
@@ -36,12 +31,13 @@
         padding: 0.4rem 2rem;
         border-radius: 4px;
         box-shadow: 0 0 15px 3px rgb(0 0 0 / 0.1), 0 0 6px 4px rgb(0 0 0 / 0.1);
-        margin-bottom: 2rem;
         background-color: hsl(var(--element-color));
     }
 
     .secondary {
-        padding: 0.3rem 0.5rem;
+        padding: 0.3rem 0.8rem;
+        min-width: 6rem;
+        justify-content: center;
         border-radius: 4px;
         box-shadow: 0 0 15px 3px rgb(0 0 0 / 0.1), 0 0 6px 4px rgb(0 0 0 / 0.1);
         background-color: hsl(var(--element-color));
